--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ hello.war
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
+/.bach/workspace/
+*.jar
